--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
-node_modules/
-npm-debug.log
-*.DS_Store
+# build
 build/extensionsByMIMEType.json
 build/mimetypesByExtension.json
+
+# eslint cache
+.eslintcache
+
+# JetBrains
+.idea
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Mac
+*.DS_Store
+
+# Node
+node_modules/
+
+# npm
+.npm
+
+# Test
+test/node_modules/
