--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-mime-types",
   "version": "1.1.0",
-  "author": "Adrien Valcke <adrienvalcke@icloud.com> (https://github.com/adrienv1520)",
+  "author": "Elysium Phase <hi@elysiumphase.com> (https://github.com/elysiumphase)",
   "description": "A Node.js and zero-dependencies MIME type utility",
   "bin": {},
   "main": "src/index.js",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:adrienv1520/node-mime-types.git"
+    "url": "git@github.com:elysiumphase/node-mime-types.git"
   },
   "engines": {
     "node": ">=8.17.0",
@@ -32,16 +32,15 @@
   "files": [
     "src"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "chai": "4.3.6",
-    "eslint": "8.15.0",
+    "chai": "4.3.7",
+    "eslint": "8.42.0",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-import": "2.27.5",
     "lodash": "4.17.21",
     "mime-db": "1.52.0",
-    "mocha": "10.0.0",
-    "prettier": "2.6.2"
+    "mocha": "10.2.0",
+    "prettier": "2.8.8"
   },
   "private": false,
   "preferGlobal": false,
